--- a/ProjectBank/Client/Pages/AuthorSearch.razor
+++ b/ProjectBank/Client/Pages/AuthorSearch.razor
@@ -18,7 +18,7 @@ else
 <div class="row my-5">
     <div class="col-lg-6 col-xl-4 offset-lg-3 offset-xl-4">
         <RadzenCard class="m-6">
-            <h3 class="h5" style="color:black;">"@AuthName":</h3>
+            <h5 class="h5" style="color:black;">"@AuthName":</h5>
             <div class="d-flex flex-row">
                 <div>
                     <div style="color:black;">Authored project ideas (@_projects.Length):</div>
@@ -35,8 +35,8 @@ else
             </div>
 
              <h4 style="color:black;">_____________________</h4> 
-            <div>
-                   <RadzenButton style="width: 250px" Icon="accessibility" BusyText="Saving ..." Text="Contact Author" Click=@ShowCloseableFromOverlayDialog  />
+            <div style="display: flex; justify-items: center; justify-content: center;">
+                   <RadzenButton style="width: 15em; background: linear-gradient(10deg, #fd297b, #ff655b)" Icon="accessibility"  Text="Contact Author" Click=@ShowCloseableFromOverlayDialog />
 
             </div>
         </RadzenCard>
@@ -77,23 +77,25 @@ else
 
      async Task ShowCloseableFromOverlayDialog()
     {
-        var email =AuthName?.ToString()+".gmail.com";
+        var email =AuthName?.ToString()+"@gmail.com";
         email =email.Replace(" ", String.Empty);
         await _dialogService.OpenAsync("", ds =>
-        @<div style="color:black;">
+        @<div style="color:black; width: 80%;">
             <div>
-            <h2 style="color:black;">Author Information</h2> </div>
+                <h3 style="color:black; width: 90%">Author Information</h3> 
+            </div>
             <div>
-        Name: @AuthName </div> 
-        <div> 
-        Email: @email</div>
-        <div>
-            <RadzenTextArea Placeholder="Write message" Style="height:75px;width:100px"/>
-          <div>
-            <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000 }))"/>
-            <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Close" Click="() => ds.Close(true)"/>
-          </div>
-        </div>
+            Name: <br> @AuthName </div> <br/>
+            <div> 
+                Email: <br> @email</div>
+            <br>
+            <div>
+                <RadzenTextArea Placeholder="Write message" Style="width: 19.5em; height: 10em; resize: none"/>
+                <div style="display: flex; justify-content: center; justify-items: center;">
+                    <RadzenButton style="margin-right: 1em; width: 6em; background: linear-gradient(10deg, #fd297b, #ff655b)" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() {Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000}))"/>
+                    <RadzenButton style="width: 6em; background: linear-gradient(10deg, #fd297b, #ff655b)" BusyText="Closing..." Text="Close" Click="() => ds.Close(true)"/>
+                </div>
+            </div>
         </div>, new DialogOptions() { CloseDialogOnOverlayClick = true });
     }
     
