--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -15,11 +15,11 @@
 }
 else
 {
+    <RadzenFieldset class="mb-4" Style="border: none">  
     <div class="row my-4">
-        <RadzenCard class="m-6 project_card">
-            <div class="project_card_content">
-            <div class="radzen_card_projects">
-                <div class="like_star">
+    <div class="project_card_content">
+                <div class="radzen_card_projects">
+                    <div class="like_star">
                         @if (_likedProjects.Contains(_project.Title))
                         {
                             <input type="checkbox" class="star_checkbox" id="star_checkbox_@_project.Id" checked="checked" @onchange="() => AddOrRemoveFavorite(_project.Title)"/>
@@ -30,61 +30,71 @@ else
                             <input type="checkbox" class="star_checkbox" style="color: #1a1e21" id="star_checkbox_@_project.Id" unchecked="true" @onchange="() => AddOrRemoveFavorite(_project.Title)"/>
                             <label class="oi oi-star" id="star_@_project.Id" for="star_checkbox_@_project.Id"></label>
                         }
-                </div>
-            <h3 class="h5" style="color:black;">Project title: "@_project?.Title":</h3>
-            <h4 style="color:black;">Authored by: <x onclick="@(() => _navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
-                 <h5 style="color:black;"> (Role: @_role) </h5>
-            </h4>
-            <div class="d-flex flex-row">
-                <div>
-                    <b style="color:black;">Project description:</b>
-                    <div style="color:black;">@(_project?.Description)</div>
-                    @if (_project?.ImageUrl != null)
-                    {
-                        <div><img class="card-img-top" src=@_project.ImageUrl alt="Project image"></div>
-                    }
-                    <b style="color:black;">Degree:</b>
-                    <div style="color:black;">@(_project?.Degree)</div>
-                    <b style="color:black;">ECTS:</b>
-                    <div style="color:black;">@(_project?.Ects)</div>
-                    <b style="color:black;">Last updated:</b>
-                    @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) day(s) ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hour(s) ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minute(s) ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
-                    <b style="color:black;">Tags:</b>
-                    <div style="color:black;">@if (_project != null){foreach (var keyword in _project.Keywords)
-                    {
-                        <div>@keyword</div>
-                    }}
-                        <div style="color:blue;">
-                            @if (_project?.FileUrl != null)
+                    </div>
+                    <h3 class="h6" style="color:black;">Project title: "@_project?.Title":</h3>
+                    <h6 style="color:black;">Authored by: <x onclick="@(() => _navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
+                        <br><h7 style="color:black;"> (Role: @_role) </h7>
+                    </h6>
+                    <div class="d-flex flex-row">
+                        <div>
+                            <b style="color:black;">Project description:</b>
+                            <div style="color:black;">
+                                @(_project?.Description)
+                            </div>
+                            @if (_project?.ImageUrl != null)
                             {
-                                <a href="@_project.FileUrl" download="@_project.Title??.pdf">@_project.Title .pdf</a>
+                                <div><img class="card-img-top" style="width: 63%" src=@_project.ImageUrl alt="Project image"></div>
                             }
-                   <h4 style="color:black;">______________________________</h4> 
+                            <b style="color:black;">Degree:</b>
+                            <div style="color:black;">@(_project?.Degree)</div>
+                            <b style="color:black;">ECTS:</b>
+                            <div style="color:black;">@(_project?.Ects)</div>
+                            <b style="color:black;">Last updated:</b>
+                            @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) day(s) ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hour(s) ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minute(s) ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
+                            <b style="color:black;">Tags:</b>
+                            <div style="color:black;">@if (_project != null){foreach (var keyword in _project.Keywords)
+                                                      {
+                                                          <div>@keyword</div>
+                                                      }}
+                                <div style="color:blue;">
+                                    @if (_project?.FileUrl != null)
+                                    {
+                                        <a href="@_project.FileUrl" download="@_project.Title??.pdf">@_project.Title .pdf</a>
+                                    }
+                                </div> 
+                            </div>
+                            <br>
+                            <div style="color: black; display: flex; justify-items: center; justify-content: center; width: 99%;">
+                                <h3 style="display: flex">_____________</h3>
+                            </div>                                <br>
+                                <div style="display: flex; justify-items: center; justify-content: center" >
+                                    @if (_project.AuthorName == _name){
+                                        <RadzenButton style="width: 250px; background: linear-gradient(10deg, #fd297b, #ff655b)" Icon="accessibility" BusyText="Saving ..." Text="Share project idea" Click=@ShowCloseableFromOverlayDialogRequest/>
+                                    } else {
+                                        <div style="display: grid; grid-template-columns: 50% 50%">
+                                            <RadzenButton style="width: 7em; background: linear-gradient(10deg, #fd297b, #ff655b); margin-right: 1em;" BusyText="Saving ..." Text="Apply" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000 }))" />  
+                                            <RadzenButton style="width: 7em; background: linear-gradient(10deg, #fd297b, #ff655b)" BusyText="Saving ..." Text="Contact" Click=@ShowCloseableFromOverlayDialogContact />
+                                        </div>
+                                    }
+                                </div>
+                            <br/>
                         </div>
-                        @if (_project.AuthorName == _name){
-                        <RadzenButton style="width: 250px" Icon="accessibility" BusyText="Saving ..." Text="Share project idea" Click=@ShowCloseableFromOverlayDialogRequest/>
-                        } else {
-                        <RadzenButton style="width: 160px" Icon="favorite" BusyText="Saving ..." Text="Apply" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "placeholder", Duration = 4000 }))" />   
-                        <RadzenButton style="width: 250px" Icon="accessibility" BusyText="Saving ..." Text="Contact Author" Click=@ShowCloseableFromOverlayDialogContact/>
-                        }
-                        
-
                     </div>
                 </div>
-                </div>
             </div>
-            </div>
-        </RadzenCard>
     </div>
+</RadzenFieldset>
 }
 
 @code {
+
     [Parameter]
     public string? Id { get; set; }
+
     private string? _role;
     private ProjectDetailsDto? _project;
     private List<string> _likedProjects = null!;
-    private string? _aToken; 
+    private string? _aToken;
     private TimeSpan _lastUpdated;
     private string? _name;
 
@@ -96,13 +106,13 @@ else
 
     void Open(string title, Type type, Dictionary<string, object> parameters, DialogOptions options)
     {
-       
+
     }
 
     void Close(dynamic result)
     {
-      // NotificationMessage success = new NotificationMessage {Severity = NotificationSeverity.Success, Summary = "Message send", Detail = "", Duration = 4000};
-        //    _notificationService.Notify(success);
+    // NotificationMessage success = new NotificationMessage {Severity = NotificationSeverity.Success, Summary = "Message send", Detail = "", Duration = 4000};
+    //    _notificationService.Notify(success);
     }
 
     void ShowNotification(NotificationMessage message)
@@ -110,13 +120,15 @@ else
         _notificationService.Notify(message);
     }
 
-    protected override async Task OnInitializedAsync(){
+    protected override async Task OnInitializedAsync()
+    {
         var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
         if (user.Identity?.IsAuthenticated == true)
         {
             var _user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
-            if (_user != null){
+            if (_user != null)
+            {
                 var claims = _user.Claims;
                 _name = _user.Identity?.Name;
                 _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
@@ -128,58 +140,61 @@ else
             }
         }
     }
-    
+
     protected override async Task OnParametersSetAsync()
     {
-        try {
-            _project = await _http.GetFromJsonAsync<ProjectDetailsDto>("/api/Project/"+Id);
+        try
+        {
+            _project = await _http.GetFromJsonAsync<ProjectDetailsDto>("/api/Project/" + Id);
             _lastUpdated = DateTime.UtcNow - _project.LastUpdated;
-        } catch {
+        }
+        catch
+        {
             _project = null;
         }
-        _role = _project.AuthorName.Length >15 ? "Student" : "Supervisor";
+        _role = _project.AuthorName.Length > 15 ? "Student" : "Supervisor";
     }
-   
+
     async Task ShowCloseableFromOverlayDialogContact()
     {
-        var email =_project.AuthorName.ToString()+"@gmail.com";
-        email =email.Replace(" ", String.Empty);
+        var email = _project.AuthorName.ToString() + "@gmail.com";
+        email = email.Replace(" ", String.Empty);
         await _dialogService.OpenAsync("", ds =>
-        @<div style="color:black;">
-            <div>
-            <h2 style="color:black;">Author Information</h2> </div>
-        <div>
-            Name: @_project.AuthorName</div> 
-        <div> 
-            Email: @email</div>
-        <div>
-            <RadzenTextArea Placeholder="Write message" Style="height:75px;width:300px"/>
-          <div>
-            <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "", Duration = 4000 }))"/>
-            <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Close" Click="() => ds.Close(true)"/>
-          </div>
-        </div>
-        </div>, new DialogOptions() { CloseDialogOnOverlayClick = true });
+            @<div style="color:black;">
+                <div>
+                    <h2 style="color:black;">Author Information</h2> </div>
+                <div>
+                    Name: @_project.AuthorName</div>
+                <div>
+                    Email: @email</div>
+                <div>
+                    <RadzenTextArea Placeholder="Write message" Style="height:75px;width:300px"/>
+                    <div>
+                        <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() {Severity = NotificationSeverity.Success, Summary = "Applied", Detail = "", Duration = 4000}))"/>
+                        <RadzenButton style="width: 75px;" BusyText="Saving ..." Text="Close" Click="() => ds.Close(true)"/>
+                    </div>
+                </div>
+            </div>, new DialogOptions() {CloseDialogOnOverlayClick = true});
     }
 
     async Task ShowCloseableFromOverlayDialogRequest()
     {
         await _dialogService.OpenAsync("", ds =>
-        @<div style="color:black;">
-            <div>
-            <h2 style="color:black;">Request supervision</h2> </div>
-        <div>
-            Enter email: </div>
-        <div>
-            <RadzenTextArea Placeholder="Enter email" Style="height:37px;width:400px"/>
-          <div>
-            <RadzenButton style="width: 100px;" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() { Severity = NotificationSeverity.Success, Summary = "Request send", Detail = "", Duration = 4000 }))"/>
-            <RadzenButton style="width: 100px;" BusyText="Saving ..." Text="Close" Click="() => ds.Close(true)"/>
-          </div>
-        </div>
-        </div>, new DialogOptions() { CloseDialogOnOverlayClick = true });
+            @<div style="color:black;">
+                <div>
+                    <h2 style="color:black;">Request supervision</h2> </div>
+                <div>
+                    Enter email: </div>
+                <div>
+                    <RadzenTextArea Placeholder="Enter email" Style="height:37px;width:400px"/>
+                    <div>
+                        <RadzenButton style="width: 100px;" BusyText="Saving ..." Text="Send" Click="@(args => ShowNotification(new NotificationMessage() {Severity = NotificationSeverity.Success, Summary = "Request send", Detail = "", Duration = 4000}))"/>
+                        <RadzenButton style="width: 100px;" BusyText="Saving ..." Text="Close" Click="() => ds.Close(true)"/>
+                    </div>
+                </div>
+            </div>, new DialogOptions() {CloseDialogOnOverlayClick = true});
     }
-    
+
     private async Task AddOrRemoveFavorite(string t)
     {
         if (_likedProjects.Contains(t))
